Fixed background register form out of bounds(2)

--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -274,7 +274,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: #1d212bd8;
   z-index: 25;
   display: flex;
